# acli

./: README.md  WARP.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: cicd.cue  publish.yaml
acli/: __init__.py  __main__.py  cli.py  config.py  configinit.py  helpers.py
acli/command/: __init__.py  app.py  helpers.py
acli/config/: __init__.py  app.py  environment.py  init.py  path.py  show.py
acli/docker/: __init__.py  app.py
acli/docker/credentials/: __init__.py  app.py  erase.py  get.py  list.py  reference.md  store.py  vault.py
acli/dockercreds/: __init__.py  app.py  get copy.py  get.py
acli/helpers/: cmd.py
acli/personio/: __init__.py  app.py  attendance.py  auth.py  employee.py  helpers.py  status.py
acli/project/: __init__.py  app.py
acli/system/: __init__.py  app.py  info.py  packages.py
docs/: INSTALL.md
scripts/: bump_app_version.sh  generate_docs.sh
tests/: test_cli.py  test_system.py
